amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/is-not-output-type-query-fields.api.federation.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/is-not-output-type-query-fields.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 2

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-output-type-in-endpoint
  Message: Type 'InputType' from field 'Query.inputReturnField' must be an output type
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/is-not-output-type-query-fields.api.graphql#/web-api/endpoint/%2Fquery%2FinputReturnField
  Property: http://www.w3.org/ns/shacl#property
  Range: [(6,4)-(6,31)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-output-type-in-endpoint
  Message: Type '[InputType]' from field 'Query.inputReturnFieldArray' must be an output type
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/is-not-output-type-query-fields.api.graphql#/web-api/endpoint/%2Fquery%2FinputReturnFieldArray
  Property: http://www.w3.org/ns/shacl#property
  Range: [(7,4)-(7,38)]
  Location: 
